API for classic bekeeper moved from core into classic beekeeper directory

--- a/programs/beekeeper/beekeeper/CMakeLists.txt
+++ b/programs/beekeeper/beekeeper/CMakeLists.txt
@@ -10,8 +10,8 @@ ADD_HIVE_EXECUTABLE ( NAME beekeeper
                       session.cpp
                       session_manager.cpp
                       time_manager.cpp
+                      beekeeper_wallet_api.cpp
                       ../core/beekeeper_wallet_manager.cpp
-                      ../core/beekeeper_wallet_api.cpp
                       ../core/beekeeper_wallet.cpp
                       ../core/token_generator.cpp
                       ../core/session_base.cpp
