--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -18,6 +18,10 @@ file(GLOB UNIT_TESTS
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/beekeeper/beekeeper_instance.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/beekeeper/time_manager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/beekeeper/extended_api.cpp
+
+   ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/beekeeper_wasm/beekeeper_wasm_api.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/beekeeper_wasm/beekeeper_wasm_app.cpp
+
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/beekeeper_wallet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/beekeeper_wallet_manager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/token_generator.cpp
@@ -25,8 +29,6 @@ file(GLOB UNIT_TESTS
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/session_manager_base.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/wallet_manager_impl.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/utilities.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/beekeeper_wasm_api.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/beekeeper_wasm_app.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/beekeeper_app_init.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/beekeeper_app_base.cpp
 )
@@ -284,7 +286,11 @@ set_target_properties(chain_test PROPERTIES ENABLE_EXPORTS true)
 
 target_link_libraries( chain_test db_fixture chainbase hive_chain hive_protocol account_history_rocksdb_plugin market_history_plugin rc_plugin witness_plugin debug_node_plugin fc ${PLATFORM_SPECIFIC_LIBS} )
 
-target_include_directories( chain_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/include" "${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/beekeeper/include" )
+target_include_directories( chain_test PUBLIC
+                           "${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/core/include"
+                           "${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/beekeeper/include"
+                           "${CMAKE_CURRENT_SOURCE_DIR}/../../programs/beekeeper/beekeeper_wasm/include"
+                           )
 
 file(GLOB PLUGIN_TESTS "plugin_tests/*.cpp")
 
