--- a/programs/beekeeper/beekeeper/CMakeLists.txt
+++ b/programs/beekeeper/beekeeper/CMakeLists.txt
@@ -21,6 +21,7 @@ ADD_HIVE_EXECUTABLE ( NAME beekeeper
                       ../core/beekeeper_app_base.cpp
                       ../core/beekeeper_app_init.cpp
                       ../core/utilities.cpp
+                      ../core/time_manager_base.cpp
                       LIBRARIES appbase webserver_plugin hive_utilities
 )
 
