--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -8,6 +8,7 @@ stages:
 variables:
   PYTEST_NUMBER_OF_PROCESSES: 8
   GIT_DEPTH: 20
+  GIT_STRATEGY: clone
   GIT_SUBMODULE_STRATEGY: recursive
   CI_DEBUG_SERVICES: "true"
   # pin to specific docker images for build repeatability
