--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ cmake_minimum_required( VERSION 3.22.1 )
 
 set( BLOCKCHAIN_NAME "Hive" )
 
+add_definitions( -DBOOST_ASIO_ENABLE_HANDLER_TRACKING )
+
 set( CMAKE_CXX_STANDARD 17 )
 set( CMAKE_CXX_EXTENSIONS OFF )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
