Add two more accounts to track their history in example exchange config file.

--- a/doc/example_config.ini
+++ b/doc/example_config.ini
@@ -32,6 +32,8 @@ shared-file-size = 24G
 # Uncomment lines to track only your own exchange account
 # tracking more accounts will have a significant impact on resources needed
 account-history-rocksdb-track-account-range = ["binance-hot","binance-hot"]
+account-history-rocksdb-track-account-range = ["binance-hot2","binance-hot2"]
+account-history-rocksdb-track-account-range = ["bdcryptohive","bdcryptohive"]
 account-history-rocksdb-track-account-range = ["bittrex","bittrex"]
 account-history-rocksdb-track-account-range = ["blocktrades","blocktrades"]
 account-history-rocksdb-track-account-range = ["deepcrypto8","deepcrypto8"]
