--- a/tests/hive-local-tools/pyproject.toml
+++ b/tests/hive-local-tools/pyproject.toml
@@ -11,15 +11,16 @@ authors = ["Mateusz Żebrak <mzebrak@syncad.com>"]
 packages = [
     { include = "hive_local_tools" },
     { include = "hive_utils" },
-    { include = "tests_api" },
 ]
 
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pytest = "7.1.2"
+pytest = "7.3.1"
 pytest-rerunfailures = "10.2"
 pytest-timeout = "2.1.0"
-pytest-xdist = "2.5.0"
+pytest-repeat = "0.9.1"
+pytest-xdist = "3.2.0"
 shared-tools = { path = "shared-tools", develop = true }
 test-tools = { path = "test-tools", develop = true }
+tests_api = { path = "tests_api", develop = true }
