--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -287,27 +287,12 @@ plugin_test:
   - timeout $((($PYTEST_TIMEOUT_MINUTES + 2) * 60)) pytest --timeout=$(($PYTEST_TIMEOUT_MINUTES * 60)) --junitxml="$JUNIT_REPORT" "${PROCESSES}" "${DURATIONS}" "${PYTEST_ARGS[@]}"
 
 .pytest_based:
-    variables:
-      JUNIT_REPORT: "report.xml" # should be ovverided by derived jobs
-
-    interruptible: true
-    image: "$CI_REGISTRY_IMAGE/ci-base-image$TEST_IMAGE_TAG"
-
-    before_script:
-      - python3 -m venv venv/
-      - . venv/bin/activate
-      - (cd $CI_PROJECT_DIR/tests/hive-local-tools && poetry install)
-    artifacts:
-      reports:
-        junit: $JUNIT_REPORT
-
-      name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
-      paths:
-        - "**/generated_during_*"
-        - "**/generated_by_package_fixtures"
-      when: always
-      expire_in: 1 week
-    rules:
+  extends: .pytest_based_template  # taken from common-ci-configuration project
+  variables:
+    JUNIT_REPORT: "report.xml" # should be ovverided by derived jobs
+    PYTEST_BASED_IMAGE_NAME: "$CI_REGISTRY_IMAGE/ci-base-image$TEST_IMAGE_TAG"
+    POETRY_INSTALL_ROOT_DIR: "$CI_PROJECT_DIR/tests/hive-local-tools"
+  rules:
     - if: $RUN_MIRRORNET_PIPELINE == "false"
 
 .test_tools_based:
