--- a/tests/hive-local-tools/pyproject.toml
+++ b/tests/hive-local-tools/pyproject.toml
@@ -16,11 +16,13 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pytest = "7.3.1"
+pytest = "7.2.2"
 pytest-rerunfailures = "10.2"
 pytest-timeout = "2.1.0"
 pytest-repeat = "0.9.1"
 pytest-xdist = "3.2.0"
+tavern = "2.2.0"
+types-PyYAML = "6.0.12.11"
 shared-tools = { path = "shared-tools", develop = true }
 test-tools = { path = "test-tools", develop = true }
 tests_api = { path = "tests_api", develop = true }
