--- a/scripts/ci-helpers/prepare_data_image_job.yml
+++ b/scripts/ci-helpers/prepare_data_image_job.yml
@@ -49,6 +49,7 @@ include:
     - $SCRIPTS_PATH/ci-helpers/get_image4submodule.sh
         "$SUBMODULE_DIR" registry.gitlab.syncad.com/hive/hive/ "HIVED_IMAGE_NAME" "$REGISTRY_USER" "$REGISTRY_PASS"
         --export-binaries="$BINARY_CACHE_PATH" --network-type="$HIVE_NETWORK_TYPE"
+    - chmod -Rc a+rwx "./$BINARY_CACHE_PATH"
     - ls -la ./$BINARY_CACHE_PATH/*
 
   artifacts:
