--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hive/beekeeper",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.1",
   "description": "call hived functions from JavaScript",
   "main": "build_wasm/beekeeper_wasm.mjs",
   "type": "module",
